examples = [
  'array-at',
  'array-iter',
  'array-operator',
  'array-ptr-local',
  'array-ptr',
  'catch',
  'ptr-inc',
  'ptr-local',
  'ptr-null',
  'shared_ptr-null',
  'shared_ptr-ref',
  'shared_ptr-unwrap-ref',
  'terminate-direct',
  'terminate-throw-any',
  'terminate-throw-exception',
  'terminate-throw-string',
  'vector-at',
  'vector-insert',
  'vector-iter-erase',
  'vector-iter-reallocate',
  'vector-iter',
  'vector-operator',
  'vector-ptr-local',
  'vector-ptr-reallocate',
  'vector-ptr',
  'wrap_array-ptr-local',
  'wrap_array-ptr',
  'wrap_array-range',
]
foreach case : examples
  executable('y3c-example-' + case,
    case + '.cc',
    dependencies: [
      y3c_dep,
    ],
  )
endforeach
